updated crews to groups

--- a/js/ckeditor/samples/inlinetextarea.html
+++ b/js/ckeditor/samples/inlinetextarea.html
@@ -50,7 +50,7 @@ var editor = CKEDITOR.inline( 'article-body' );
 				&lt;h2&gt;Technical details &lt;a id="tech-details" name="tech-details"&gt;&lt;/a&gt;&lt;/h2&gt;
 
 				&lt;table align="right" border="1" bordercolor="#ccc" cellpadding="5" cellspacing="0" style="border-collapse:collapse;margin:10px 0 10px 15px;"&gt;
-					&lt;caption&gt;&lt;strong&gt;Mission crew&lt;/strong&gt;&lt;/caption&gt;
+					&lt;caption&gt;&lt;strong&gt;Mission group&lt;/strong&gt;&lt;/caption&gt;
 					&lt;thead&gt;
 					&lt;tr&gt;
 						&lt;th scope="col"&gt;Position&lt;/th&gt;
