--- a/_resources/emailtemplates/emailtest_welcome.html
+++ b/_resources/emailtemplates/emailtest_welcome.html
@@ -12,18 +12,18 @@
                                     <thead>
                                         <tr style='background:#E9E9E9;'>
                                             <td style='padding:10px 10px;'>
-                                               <img src='http://www.importunderground.com/images/email/header_bg.jpg' alt='Import Underground' />
+                                               <img src='<?= $__site['url']; ?>/images/email/header_bg.jpg' alt='<?= $__site['name']; ?>' />
                                             </td>
                                         </tr>
                                     </thead>
                                     <tbody>
                                         <tr>
                                             <td>
-                                                <table width='100%' style='font-family: helvetica-neue, arial;border-collapse: collapse;height: 370px;margin: 0;padding: 0; background-image: url(http://www.importunderground.com/images/email/regsuccess_bg.jpg); background-color: #000; background-repeat: no-repeat; background-position: center top;' border='0'>
+                                                <table width='100%' style='font-family: helvetica-neue, arial;border-collapse: collapse;height: 370px;margin: 0;padding: 0; background-image: url(<?= $__site['url']; ?>/images/email/regsuccess_bg.jpg); background-color: #000; background-repeat: no-repeat; background-position: center top;' border='0'>
                                                     <tbody>
                                                         <tr>
                                                             <td style='vertical-align:top;padding:20px;'>
-                                                                 <h1 style='color:#ffffff;text-shadow:0 1px  #333;'>Welcome to Import Underground</h1>
+                                                                 <h1 style='color:#ffffff;text-shadow:0 1px  #333;'>Welcome to <?= $__site['name']; ?></h1>
                                                                 <h3 style='color: #ffffff;'>Thanks for joining our growing community!</h3>
                                                             </td>
                                                         </tr>
@@ -35,23 +35,23 @@
                                             <td style='padding:20px 20px;'>
                                                 <p>We're excited that you've decided to become part of our online community of car enthusiasts. We have many more features coming in the near future and hope that you enjoy your time on the site.</p>
                                                 <p></p>
-                                                <p>You can log in <a href='http://www.importunderground.com'>here</a> and <a href='http://www.importunderground.com/createpost'>create your first post</a>.</p>
-                                                <p>Also, don't forget to <a href='http://www.importunderground.com/profile'>update your profile</a> and <a href='http://www.importunderground.com/myposts'>manage your posts</a>.</p>
+                                                <p>You can log in <a href='<?= $__site['url']; ?>'>here</a> and <a href='<?= $__site['url']; ?>/createpost'>create your first post</a>.</p>
+                                                <p>Also, don't forget to <a href='<?= $__site['url']; ?>/profile'>update your profile</a> and <a href='<?= $__site['url']; ?>/myposts'>manage your posts</a>.</p>
                                             </td>
                                         <tr>
                                             <td style='padding:20px 20px;'>
-                                               <p>If you have any questions, comments, concerns or suggestions please email them to <a href='mailto:support@importunderground.com'>support@importunderground.com</a></p>
+                                               <p>If you have any questions, comments, concerns or suggestions please email them to <a href='mailto:<?= $__site['email']; ?>'><?= $__site['email']; ?></a></p>
                                             </td>
                                         </tr>
                                         <tr>
                                             <td style='padding:20px 20px;'>
                                                 <p>Regards,</p>
-                                               <p>-Import Underground Team</p>
+                                               <p>-<?= $__site['name']; ?> Team</p>
                                             </td>
                                         </tr>
                                         <tr style='background:#262626;'>
                                             <td style='padding:20px 20px; '>
-                                               <p style='color: #cccccc;font-size: 12px;text-align:center;'> &copy;2014 Import Underground | <a href='http://www.importunderground.com/privacypolicy' style='color:#ccc'>Privacy Policy</a> | <a href='http://www.importunderground.com/terms' style='color:#ccc'>Terms and Conditions</a> | <a href='http://www.importunderground.com/unsubscribe?email=$to' style='color:#ccc'>Unsubscribe</a></p>
+                                               <p style='color: #cccccc;font-size: 12px;text-align:center;'> &copy;2014 <?= $__site['name']; ?> | <a href='<?= $__site['url']; ?>/privacypolicy' style='color:#ccc'>Privacy Policy</a> | <a href='<?= $__site['url']; ?>/terms' style='color:#ccc'>Terms and Conditions</a> | <a href='<?= $__site['url']; ?>/unsubscribe?email=$to' style='color:#ccc'>Unsubscribe</a></p>
                                             </td>
                                         </tr>
                                     </tbody>
